fix responsiveness on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,6 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background: rgba(var(--dark-mode-bg), 0.4); */
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   overflow: hidden;
@@ -129,7 +128,6 @@ a {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 5px;
-  /* overflow: hidden; */
 }
 .app.dark-mode .wrapper {
   color: var(--main-text-color);
@@ -157,6 +155,9 @@ a {
   /* overflow: hidden; */
   clip-path: circle(50% at 50% 50%);
   border: 1px solid black;
+}
+.app.dark-mode .circle {
+  border: 1px solid white;
 }
 .circle img {
   width: 200px;
@@ -227,6 +228,14 @@ a {
   .navbar {
     justify-content: center;
     align-items: center;
+  }
+  .circle {
+    margin-top: 10vh;
+  }
+}
+@media screen and (max-width: 360px) {
+  .circle {
+    margin-top: 20vh;
   }
 }
 
